# RadikChat

./: .gitignore  CMakeLists.txt  CmakePresets.json  LICENSE  README  README.md  clean.bat  test.c
bot/: CMakeLists.txt  bot.c  bot.h
client/: CMakeLists.txt  Client.c  Client.h  chatsManager.c  chatsManager.h  chats_manager.c  chats_manager.h  client.c  client.h  clientUtils.c  clientUtils.h  client_utils.c  client_utils.h  contactsManager.c  contactsManager.h  contacts_manager.c  contacts_manager.h
include/: .debug.h.swp  .network_manager.h.swp  .window_manager.h.swp  debug.h  mainwindow.h  network_manager.h
lib/: CMakeLists.txt
lib/client_database/: CMakeLists.txt  client_database.c  client_database.h
lib/console/: CMakeLists.txt
lib/console/consoleOut/: CMakeLists.txt  consoleControl.c  consoleControl.h  consoleInput.c  consoleInput.h  consoleOutput.c  debug.c  debug.h
lib/console/console_out/: CMakeLists.txt  console_control.c  console_control.h  console_input.c  console_output.c  console_output.h  debug.c  debug.h
lib/cryptography/: CMakeLists.txt  hash_functions.c  hash_functions.h
lib/dataStructure/queue/: queue.c  queue.h
lib/data_structures/: CMakeLists.txt
lib/data_structures/queue/: CMakeLists.txt  queue.c  queue.h
lib/database_utils/: CMakeLists.txt  database_utils.c  database_utils.h
lib/global_values/: CMakeLists.txt  global_values.c  global_values.h
lib/miscellaneous/: CMakeLists.txt  critical_section.c  critical_section.h  miscellaneous.c  miscellaneous.h
lib/network/: CMakeLists.txt
lib/network/packet/: CMakeLists.txt  packet.c  packet.h  tlPacket.c  tlPacket.h  tl_packet.c  tl_packet.h
lib/network/pendingOperation/: CMakeLists.txt  request.c  request.h
lib/network/pending_operation/: request.c  request.h
lib/network/socket/: CMakeLists.txt  socketUtils.c  socketUtils.h  socket_utils.c
lib/network/types/: CMakeLists.txt  contact.h
lib/server_database/: CMakeLists.txt  server_database.c  server_database.h  server_db_manager.c  server_db_manager.h
lib/utils/: CMakeLists.txt
lib/utils/consoleOut/: CMakeLists.txt  consoleControl.c  consoleControl.h  consoleInput.c  consoleOutput.c  consoleOutput.h  debug.c  debug.h
lib/utils/debug/: CMakeLists.txt  Debug.c  Debug.h  debug.c  debug.h
lib/utils/network/: CMakeLists.txt  NetworkTypes.c  NetworkTypes.h  SocketUtils.c  SocketUtils.h  networkTypes.c  networkTypes.h  socketUtils.c  socketUtils.h  socket_utils.c  socket_utils.h
lib/utils/network/packet/: packet.c  packet.h  tlPacket.c  tlPacket.h
lib/utils/network/packetManager/: packet.c  packet.h
lib/utils/network/pendingOperation/: delivery.c  delivery.h  request.c  request.h
lib/utils/network_manager/: CMakeLists.txt  network_manager.c
lib/utils/types/: CMakeLists.txt  contact.h
server/: CMakeLists.txt  Server.c  Server.h  ServerUtils.c  ServerUtils.h  packetProcessor.c  packetProcessor.h  packet_processor.c  packet_processor.h  server.c  server.h  serverEvent.c  serverEvent.h  serverUtils.c  serverUtils.h  server_utils.c
src/: .client.c.swp  .network_manager.c.swp  .server.c.swp  CMakeLists.txt  client.c  client.c~  debug.c  debug.c~  mainwindow.c  network_manager.c  server.c
src/client/: CMakeLists.txt  client.c  mainwindow.c  mainwindow.h
src/server/: CMakeLists.txt  server.c
