cmake_minimum_required(VERSION 3.28)

add_subdirectory(console)
add_subdirectory(data_structures)
add_subdirectory(network)
add_subdirectory(server_database)
add_subdirectory(client_database)
add_subdirectory(third_party)
add_subdirectory(global_values)
add_subdirectory(database_utils)
add_subdirectory(cryptography)